<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_700"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar_help"
        layout="@layout/toolbar_with_back" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fadeScrollbars="false"
        android:scrollbarSize="5dp"
        android:scrollbarThumbVertical="@android:color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="60dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Below are the documentation sections"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="20dp"
                android:background="@color/white" />

            <Button
                android:id="@+id/innerworks_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:padding="10dp"
                android:text="@string/Simulation_algorithms"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <View
                android:layout_width="50dp"
                android:layout_height="1dp"
                android:layout_margin="5dp"
                android:background="@color/white" />

            <Button
                android:id="@+id/settings_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:padding="10dp"
                android:text="@string/Simulation_Calibrations"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <View
                android:layout_width="50dp"
                android:layout_height="1dp"
                android:layout_margin="5dp"
                android:background="@color/white" />

            <Button
                android:id="@+id/history_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:padding="10dp"
                android:text="@string/Simulation_History"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <View
                android:layout_width="50dp"
                android:layout_height="1dp"
                android:layout_margin="5dp"
                android:background="@color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="5dp"
                android:background="@color/white"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Inner Workings of the Algorithm"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/simulation_documentation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:focusable="true"
                    android:inputType="none"
                    android:paddingHorizontal="10dp"
                    android:text="@string/alg_exp1"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="10dp"
                    android:background="@color/teal_200" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="How to Calibrate the Simulations"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/callibration_documentation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:paddingHorizontal="10dp"
                    android:text="@string/calibrations_exp1"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="10dp"
                    android:background="@color/teal_200" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Understanding the Simulation Stats"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/history_documentation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:paddingHorizontal="10dp"
                    android:text="@string/stats_exp1"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/return_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:src="@drawable/ic_baseline_keyboard_arrow_up_24"
        app:backgroundTint="@color/teal_200" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>